new era. doing fukking changing.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chnging",
-  "version": "0.1.0",
+  "name": "CHNG",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 80",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 1984",
     "lint": "next lint"
   },
   "dependencies": {
