--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 80",
+    "dev": "next dev --turbo -p 80",
     "build": "next build",
     "start": "next start -p 3333",
     "lint": "next lint"
