--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.0",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
